--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Goal-** to classify houses based on their geographic region and median income using the California Housing dataset. This project involves clustering houses into groups using unsupervised learning (K-Means) and then leveraging these clusters to train a supervised classification model."
+    "**Goal-** to classify houses based on their geographic region and median income using the California Housing dataset. This project involves clustering houses into groups using unsupervised learning (K-Means) and then leveraging these clusters to train a supervised classification model; in order to predict new points and to predict the cluster they are associated with."
    ]
   },
   {
