--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# California Housing system"
+    "# California Housing system (Classification Problem)"
    ]
   },
   {
